# LocalMind

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: ios-developer-setup.md
docs/superpowers/plans/: 2026-05-11-tauri-mobile-ios-m1-bootstrap.md
docs/superpowers/specs/: 2026-05-11-tauri-mobile-ios-parity-design.md
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  Info.macos.plist  tauri.conf.json
src-tauri/capabilities/: default.json  ios.json
src-tauri/src/: auth_proxy.rs  binaries.rs  config.rs  host_proxy.rs  lib.rs  llama.rs  server.rs  slots.rs  slots_persist.rs  synapse.rs  synapse_proto.rs  synapse_tls.rs  synapse_token.rs  voice.rs  voice_audio.rs
src-tauri/src/ios/: mod.rs
src/components/: AddPeerDialog.tsx  AudioDropZone.tsx  OfflineBanner.tsx  Sidebar.tsx  SlotsPanel.tsx  TranscriptView.tsx  UpdateBanner.tsx
src/components/__tests__/: OfflineBanner.test.tsx  TranscriptView.test.tsx  transcript_markdown.test.tsx
src/lib/: api.ts  online.ts  slot-routing.ts  store.ts  sw-register.ts  types.ts  voice-engine.ts
src/lib/__tests__/: online.test.ts  slot-routing.test.ts  voice-engine.test.ts
src/pages/: Chat.tsx  Connect.tsx  Marketplace.tsx  Models.tsx  Settings.tsx  Synapse.tsx
