[package]
name = "localmind"
version = "0.1.0"
description = "LocalMind — run open-source LLMs entirely on your device."
authors = ["LocalMind contributors"]
edition = "2021"
readme = "../README.md"

[lib]
name = "localmind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sysinfo = "0.30"
local-ip-address = "0.6"
zip = "2"
mdns-sd = "0.11"
hostname = "0.4"
# Phase 3: Synapse auth proxy (token + HMAC-signed beacon).
# `data-encoding` for human-readable base32 tokens (printable, no padding
# issues on copy-paste), `hmac` + `sha2` for the beacon signature, and
# `rand` for cryptographic-strength token generation.
data-encoding = "2"
hmac = "0.12"
sha2 = "0.10"
rand = { version = "0.8", features = ["std_rng"] }
subtle = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
